--- a/views/sequence.haml
+++ b/views/sequence.haml
@@ -1,6 +1,6 @@
 %h2 Sequence for #{ name }:#{segment[:start]}..#{segment[:end]}
 
 %ol.basepairs
-  - sequence.chars.each do |base|
-    %li= base
+  - sequence.each_char do |base|
+    %li{:class => "base #{ base.downcase }"}= base
 
